# litmap

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
configs/: default.yaml  tutorial.yaml
docs/: api.md  conf.py  design.md  getting-started.md  index.html  index.md
docs/_static/: custom.css
docs/case-studies/adc-landscape/: analysis_manifest.json  cluster_component_profile.csv  cluster_summary.csv  component_cluster_contrast.csv  coords_2d.csv  labels.csv  map_interactive.html  map_static.html  pca_cluster_components.csv  pca_components.csv  pca_loadings.csv  pca_plot_components.csv
docs/case-studies/admet-safety-landscape/: analysis_manifest.json  cluster_summary.csv  coords_2d.csv  labels.csv  map_interactive.html
docs/case-studies/breast-cancer/: analysis_manifest.json  cluster_component_profile.csv  cluster_summary.csv  component_cluster_contrast.csv  coords_2d.csv  labels.csv  map_interactive.html  map_static.html  pca_cluster_components.csv  pca_components.csv  pca_loadings.csv  pca_plot_components.csv
docs/case-studies/cancer-immunotherapy/: analysis_manifest.json  cluster_component_profile.csv  cluster_summary.csv  component_cluster_contrast.csv  (+8 more)
docs/getting-started/: first-steps.md  index.md  installation.md
docs/guides/: design-principles.md  index.md  repository-policy.md
docs/reference/: cli.md  index.md  public-api.md
docs/stylesheets/: extra.css
docs/tutorial-data/: adc-landscape.csv  admet-safety-landscape.csv  breast-cancer.csv  cancer-immunotherapy.csv  immunotherapy-landscape.csv  local-csv-corpus.csv  lung-cancer.csv  openalex-topic-scan.csv  protac-landscape.csv  target-discovery-omics.csv  translational-biomarker-stratification.csv
docs/tutorials/: adc-landscape.html  adc-landscape.md  admet-safety-landscape.html  admet-safety-landscape.md  breast-cancer.html  breast-cancer.md  cancer-immunotherapy.html  cancer-immunotherapy.md  immunotherapy-landscape.html  immunotherapy-landscape.md  index.html  index.md  local-csv-corpus.html  local-csv-corpus.md  lung-cancer.html  lung-cancer.md  openalex-topic-scan.html  openalex-topic-scan.md  protac-landscape.html  protac-landscape.md  target-discovery-omics.html  target-discovery-omics.md  toy-corpus.md  translational-biomarker-stratification.html  translational-biomarker-stratification.md
scripts/: build_case_studies.py
src/litmap/: __init__.py  cli.py  core.py
tests/: test_imports.py
(+77 files in other folders)
