[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litmap"
version = "0.1.0"
description = "Minimal, reproducible literature mapping package."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Dai"}]
keywords = ["literature", "mapping", "clustering", "documentation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
docs = [
  "Sphinx>=8.2",
  "pydata-sphinx-theme>=0.16",
  "myst-parser>=4.0",
  "sphinx-design>=0.6",
]

[project.scripts]
litmap = "litmap.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

